--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -165,7 +165,7 @@
                             <div class="mat-card">
                                 <ul class="col g-2">
                                     <li>
-                                        <a class="link-text" href="">پروفایل</a>
+                                        <a class="link-text" href="/Admin/Home">پروفایل</a>
                                     </li>
                                     <li>
                                         <a class="link-text" href="/LogOut">خروج</a>
@@ -185,7 +185,7 @@
                             <div class="mat-card">
                                 <ul class="col g-2">
                                     <li>
-                                        <a class="link-text" href="">پروفایل</a>
+                                        <a class="link-text" href="/Admin/Home">پروفایل</a>
                                     </li>
                                     <li>
                                         <a class="link-text" href="/LogOut">خروج</a>
