--- a/GhasreMobile/Views/ShopCart/OnlinePayment.cshtml
+++ b/GhasreMobile/Views/ShopCart/OnlinePayment.cshtml
@@ -21,9 +21,8 @@
     }
     else
     {
-        <div class="alert alert-danger">
+        <div class="uk-alert uk-alert-danger">
             <h2>پرداخت با شکست مواجه شد</h2>
-
         </div>
     }
 </div>
