--- a/GhasreMobile/Areas/User/Views/Order/Finalize.cshtml
+++ b/GhasreMobile/Areas/User/Views/Order/Finalize.cshtml
@@ -25,69 +25,15 @@
         <partial name="_Cart" model="Model" />
 
         @await Component.InvokeAsync("CheckDiscountUser")
-       
 
-        <div class="mat-card">
-            <h4 class="uk-margin-small-bottom">
-                انتخاب آدرس
-            </h4>
-            <div class="fg-col">
-                <label class="fg-label">آدرس</label>
-                <textarea class="entry"></textarea>
-            </div>
+        <div id="FinalVerfity">
+
         </div>
-
-        <div class="mat-card">
-            <h4 class="uk-margin-small-bottom">
-                روش های ارسال
-            </h4>
-            <div class="fg-col">
-                <label class="radio">
-                    <span>ارسال با پیک</span>
-                    <input id="radio0" name="I-1586-1603-1600-1595-1589O" class="uk-radio" value="سیب" type="radio">
-                </label>
-                <label class="radio">
-                    <span>ارسال با پست</span>
-                    <input id="radio1" name="I-1586-1603-1600-1595-1589O" class="uk-radio" value="موز" type="radio">
-                </label>
-                <label class="radio">
-                    <span>ارسال با چاپاره</span>
-                    <input id="radio2" name="I-1586-1603-1600-1595-1589O" class="uk-radio" value="هلو" type="radio">
-                </label>
-                <label class="radio">
-                    <span>ارسال با تیپاکس</span>
-                    <input id="radio3" name="I-1586-1603-1600-1595-1589O" class="uk-radio" value="آلبالو" type="radio">
-                </label>
-            </div>
-        </div>
-
-        <hr class="uk-divider-icon uk-margin" />
-
-        <div class="mat-card col">
-            <h3>
-                پرداخت
-            </h3>
-            <p class="uk-alert uk-alert-warning">
-                مشتری محترم، لطفا دقت کنید مبلغ پرداخت شده غیر قابل عودت می باشد، لطفا قبل از خرید اطمینان حاصل فرمایید
-            </p>
-            <div class="rowr">
-                <h3 class="row g-1">
-                    <span>
-                        تومان
-                    </span>
-                    463,000,000
-                </h3>
-                <a href="" class="mini-wallet uk-margin-auto-right">
-                    <label>کیف پول</label>
-                    <span class="rowr">
-                        460,000
-                        <span>تومان</span>
-                    </span>
-                </a>
-            </div>
-        </div>
-
     </div>
 
 }
-
+@section Scripts{
+    <script>
+        $('#FinalVerfity').load('/User/Order/FinalVerfity');
+    </script>
+}
