upate layout name

--- a/GhasreMobile/Views/Account/ChangePassword.cshtml
+++ b/GhasreMobile/Views/Account/ChangePassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ChangePasswordVm
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "تغیر رمز";
     ViewData["Image"] = "/st/r/Entry_1.png";
     Layout = "_AccountLayout.cshtml";
 }
