--- a/GhasreMobile/Views/Account/ForgotPassword.cshtml
+++ b/GhasreMobile/Views/Account/ForgotPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ForgotPasswordVm
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "فراموش کردن رمز";
     Layout = "_AccountLayout.cshtml";
 }
 
