--- a/GhasreMobile/Views/Account/Register.cshtml
+++ b/GhasreMobile/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RegisterVm
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "ثبت نام";
     Layout = "_AccountLayout.cshtml";
 }
 @section Scripts
