--- a/GhasreMobile/Views/Account/Login.cshtml
+++ b/GhasreMobile/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@model LoginVm
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "ورود";
     ViewData["Image"] = "/st/r/Entry_1.png";
     Layout = "_AccountLayout.cshtml";
 }
