--- a/GhasreMobile/Views/Account/RestorePassword.cshtml
+++ b/GhasreMobile/Views/Account/RestorePassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ActiveVm
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "فراموش کردن رمز";
     ViewData["Image"] = "/st/r/Entry_1.png";
     Layout = "_AccountLayout.cshtml";
 }
