--- a/GhasreMobile/Areas/Admin/Views/Order/Components/OrderInfo.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Order/Components/OrderInfo.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group col-md-4">
                 <label>نام مشتری:</label>
-                <span>@Model.TblOrderDetail.First().Client.Name</span>
+                <span>@Model.Client.Name</span>
             </div>
             <div class="form-group col-md-4">
                 <label>تاریخ ثبت سفارش:</label>
