--- a/GhasreMobile/Areas/Admin/Views/PostOption/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/PostOption/Components/Create.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="modal-header">
+﻿@model IEnumerable<DataLayer.Models.TblPostOption> 
+<div class="modal-header">
     <h6 class="modal-title" id="modalCenterTitle">
         افزودن
     </h6>
