--- a/GhasreMobile/Views/Shared/_Cart.cshtml
+++ b/GhasreMobile/Views/Shared/_Cart.cshtml
@@ -42,6 +42,7 @@
                         <div class="col">
                             @if (item.PriceAfterDiscount == 0)
                             {
+                                <label> </label>
                                 <label> @item.PriceBeforeDiscount.Value.ToString("#,0")</label>
                             }
                             else
