--- a/GhasreMobile/Areas/User/Views/Order/FinalVerfity.cshtml
+++ b/GhasreMobile/Areas/User/Views/Order/FinalVerfity.cshtml
@@ -47,7 +47,7 @@
             </p>
 
 
-            <div class="rowr" onclick="document.getElementById('mainForm').submit()">
+            <div class="rowr" >
 
                 <div class="basket-factor box-shadow">
                     <div class="profit-amount">تخفیف  : <span>@Model.DiscountPrice.ToString("#,0") تومان </span></div>
@@ -57,10 +57,9 @@
                 </div>
 
                 <button type="submit" class="mini-wallet uk-margin-auto-top uk-margin-auto-right">
-                    <span class="label">کیف پول</span>
+                    <span class="label">ثبت و پرداخت </span>
                     <span class="rowr">
-                        460,000
-                        <span>تومان</span>
+                        <span></span>
                     </span>
                 </button>
 
