update show wallet

--- a/GhasreMobile/Areas/User/Views/Wallet/Charge.cshtml
+++ b/GhasreMobile/Areas/User/Views/Wallet/Charge.cshtml
@@ -11,7 +11,7 @@
     <p class="text-3 uk-margin-small-top uk-margin-bottom">
         دقت کنید، مبلغ غیر قابل عودت می باشد
     </p>
-    <form asp-action="Charge" asp-controller="Wallet" asp-area="User">
+    <form asp-action="ChargeWallet" asp-controller="Wallet" asp-area="User">
         <div class="fg-col" dir="rtl">
             <label class="fg-label">مبلغ شارژ <span class="text-3">(ريال)</span></label>
             <input type="number" class="entry" asp-for="Amount" />
