--- a/GhasreMobile/Areas/Admin/Views/Config/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Config/Index.cshtml
@@ -21,6 +21,11 @@
                         <input asp-for="HazineErsalBaPost" class="form-control form-control-sm d-inline-block d-sm-block col-lg-10 float-left" placeholder="مثال: 19,000">
                         <br /><span class="text-danger" asp-validation-for="HazineErsalBaPost"></span>
                     </div>
+                    <div class="form-group col-lg-12">
+                        <label>سقف هزینه ارسال رایگان: </label>
+                        <input asp-for="SagfePost" class="form-control form-control-sm d-inline-block d-sm-block col-lg-10 float-left" placeholder="مثال: 19,000">
+                        <br /><span class="text-danger" asp-validation-for="SagfePost"></span>
+                    </div>
                     <div class="form-group col-lg-12 mt-lg-3">
                         <label>هزینه ارسال با تیپاکس و چاپار</label>
                         <input asp-for="HazineErsalBaTipaxChapare" class="form-control form-control-sm d-inline-block d-sm-block col-lg-10 float-left" placeholder="مثال: 28,000">
