--- a/GhasreMobile/Areas/Admin/Views/PostOption/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/PostOption/Components/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="modal-header">
+﻿@model DataLayer.Models.TblPostOption
+<div class="modal-header">
     <h6 class="modal-title" id="modalCenterTitle">
         ویرایش
     </h6>
@@ -6,16 +7,22 @@
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-<form>
+<form asp-action="Edit" asp-controller="PostOption" method="post"
+      data-ajax="true"
+      data-ajax-method="POST"
+      data-ajax-mode="replace"
+      data-ajax-complete="EndCatagoryCreate()"
+      data-ajax-update="#ajaxresult">
+    <input type="hidden" asp-for="PostOptionId" />
     <div class="modal-body">
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label>نحوه ارسال</label>
-                <input class="form-control form-control-sm" placeholder="مثال: ارسال با تیپاکس">
+                <input asp-for="Name" class="form-control form-control-sm" placeholder="مثال: ارسال با تیپاکس">
             </div>
             <div class="form-group col-md-6">
                 <label>قیمت (تومان)</label>
-                <input class="form-control form-control-sm" placeholder="مثال: 20000">
+                <input asp-for="Price" class="form-control form-control-sm" placeholder="مثال: 20000">
             </div>
         </div>
     </div>
@@ -23,3 +30,6 @@
         <button type="submit" class="btn btn-success btn-sm text-white">ویرایش<span class="icon-holder uk-margin-small-right" uk-icon="create-outline"></span></button>
     </div>
 </form>
+
+<script src="~/Validate/jquery.validate.min.js"></script>
+<script src="~/Validate/jquery.validate.unobtrusive.js"></script>
