--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -18,6 +18,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
+    <link rel="manifest" type="application/json+oembed" href="~/manifest.json"/>
+
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#810081">
 
@@ -301,7 +303,7 @@
                             <span>تبریز - ولیعصر - سربالایی ولیعصر - خیابان حافظ</span>
                         </li>
                         <li>
-                            <span>GhasrMobile@Gmail.Com</span>
+                            <a href="/Contact">اطلاعات بیشتر</a>
                         </li>
                     </ul>
                     <div class="media">
@@ -332,7 +334,7 @@
     </div>
 
     <!--Pwa-->
-    @*<script src="~/app.js"></script>*@
+    <script src="~/app.js"></script>
 
     <script src="~/Jquery/jquery-3.4.1.min.js"></script>
     <script src="~/js/uikit.min.js"></script>
