--- a/GhasreMobile/Areas/User/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/User/Views/Shared/_Layout.cshtml
@@ -15,6 +15,16 @@
     <link href="~/css/pages/user.min.css" rel="stylesheet" />
     <link href="~/css/Load.css" rel="stylesheet" />
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+    <link rel="manifest" type="application/json+oembed" href="~/manifest.json" />
+
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#810081">
+
     @RenderSection("Styles", false)
 
 </head>
