--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -68,6 +68,14 @@
                                         <span class="title">تنظیمات سایت</span>
                                     </a>
                                 </li>
+                                <li class="nav-item active">
+                                    <a href="/Admin/PostOption" class="LoadingDiv">
+                                        <span class="icon-holder">
+                                            <i uk-icon="logo-usd"></i>
+                                        </span>
+                                        <span class="title">هزینه های ارسال</span>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item active">
