--- a/GhasreMobile/Views/Shared/_Ad.cshtml
+++ b/GhasreMobile/Views/Shared/_Ad.cshtml
@@ -2,5 +2,5 @@
 
 
 <a href="@Model.Link" title="" class="ad">
-    <img src="~/Images/Blogs/@Model.Image" alt="@Model.Label" />
+    <img src="~/Images/Ad/@Model.Image" alt="@Model.Label" />
 </a>
