--- a/GhasreMobile/Areas/Admin/Views/Ad/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Ad/Components/Edit.cshtml
@@ -32,7 +32,7 @@
         <label class="mt-2">افزودن تصویر</label>
         <br />
         <div class="custom-file col-md-7">
-            <input asp-for="Image" type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" onchange="inputChanged(this)">
+            <input name="file" type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" onchange="inputChanged(this)">
             <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">@Model.Image</label>
         </div>
         <br />
