--- a/GhasreMobile/Areas/User/Views/Order/Finalize.cshtml
+++ b/GhasreMobile/Areas/User/Views/Order/Finalize.cshtml
@@ -35,5 +35,13 @@
 @section Scripts{
     <script>
         $('#FinalVerfity').load('/User/Order/FinalVerfity');
+
+
+        $("#radio").click(function () {
+
+            alert("3");
+            //// This will redirect to the value, relative to the current path
+            //location.href = $(this).val();
+        });
     </script>
 }
