--- a/GhasreMobile/Areas/User/Views/Wallet/_TransactionHistory.cshtml
+++ b/GhasreMobile/Areas/User/Views/Wallet/_TransactionHistory.cshtml
@@ -1,35 +1,39 @@
 ﻿@model IEnumerable<TblWallet>
-<table class="table mat-card" dir="rtl">
-    <thead>
-        <tr>
-            <th>مقدار</th>
-            <th>نوع</th>
-            <th>تاریخ</th>
-            <th>توضیحات</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+@if (Model.Any())
+{
+    <table class="table mat-card" dir="rtl">
+        <thead>
             <tr>
-
-                @if (item.IsDeposit)
-                {
-                    <td class="uk-text-success">@item.Amount.ToString("#,0")</td>
-                    <td class="uk-text-success">
-                        واریز
-                    </td>
-                }
-                else
-                {
-                    <td class="uk-text-danger">@item.Amount.ToString("#,0")</td>
-                    <td class="uk-text-danger">
-                        برداشت
-                    </td>
-                }
-                <td>@item.Date.DateToShamsi()</td>
-                <td>@item.Description</td>
+                <th>مقدار</th>
+                <th>نوع</th>
+                <th>تاریخ</th>
+                <th>توضیحات</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+
+                    @if (item.IsDeposit)
+                    {
+                        <td class="uk-text-success">@item.Amount.ToString("#,0")</td>
+                        <td class="uk-text-success">
+                            واریز
+                        </td>
+                    }
+                    else
+                    {
+                        <td class="uk-text-danger">@item.Amount.ToString("#,0")</td>
+                        <td class="uk-text-danger">
+                            برداشت
+                        </td>
+                    }
+                    <td>@item.Date.DateToShamsi()</td>
+                    <td>@item.Description</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+}
