--- a/GhasreMobile/Areas/User/Views/Order/Index.cshtml
+++ b/GhasreMobile/Areas/User/Views/Order/Index.cshtml
@@ -37,7 +37,12 @@
                     }
                 </tbody>
                 <tfoot>
-
+                    <tr>
+                        <td></td>
+                        <td>تخفیف </td>
+                        <td></td>
+                        <td>@item.PaymentStatus.ToString("#,0")   تومان</td>
+                    </tr>
                     <tr>
                         <td></td>
                         <td>هزینه ارسال</td>
