--- a/GhasreMobile/Areas/Admin/Views/Comment/Components/CommentInfo.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Comment/Components/CommentInfo.cshtml
@@ -13,7 +13,7 @@
         <div class="form-row ">
             <div class="form-group col-md-4">
                 <label>نام کاربری:</label>
-                <span>@Model.Client.TellNo</span>
+                <span>@Model.Client.Name</span>
             </div>
             <div class="form-group col-md-4">
                 <label>تاریخ ثبت:</label>
