--- a/GhasreMobile/Areas/Admin/Views/Topic/Components/Info.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Topic/Components/Info.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿@model DataLayer.Models.TblTopic
+
+@using GhasreMobile.Utilities
+
 <div class="modal-header">
     <h6 class="modal-title" id="modalCenterTitle">
         جزئیات
@@ -12,25 +15,30 @@
         <div class="form-row ">
             <div class="form-group col-md-6">
                 <label>موضوع:</label>
-                <span>سامسونگ خراب شده است</span>
-            </div>            
+                <span>@Model.Title</span>
+            </div>
             <div class="form-group col-md-6">
                 <label>تاریخ ثبت:</label>
-                <span>1399</span>
+                <span>@Model.DateCreated.Value.AllToShamsi()</span>
             </div>
             <div class="form-group col-md-6">
                 <label>وضعیت: </label>
 
-                <span class="text-success">تایید شده</span>
-
-                <span class="text-warning">تایید نشده</span>
+                @if (Model.IsValid)
+                {
+                    <span class="text-success">تایید شده</span>
+                }
+                else
+                {
+                    <span class="text-warning">تایید نشده</span>
+                }
 
             </div>
 
             <div class="form-group col-12">
                 <label>پیام:</label>
                 <div class="bg-light p-3 uk-border-rounded overflow-auto">
-                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+                    @Model.Body
                 </div>
             </div>
         </div>
