--- a/GhasreMobile/Areas/Admin/Views/Topic/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Topic/Index.cshtml
@@ -1,8 +1,11 @@
-﻿
+﻿@model IEnumerable<DataLayer.Models.TblTopic>
+
 @{
     ViewData["Title"] = "تاپیک";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+
+@using GhasreMobile.Utilities
 
 <div class="row flex-div">
     <div class="col-md-12 flex-div pb-3 pt-3">
@@ -38,24 +41,33 @@
                         </thead>
                         <tbody>
 
-                            <tr>
-                                <td>تاچ خراب شده است</td>
-                                <td>1399</td>
-                                <td>
-                                    <span class="mr-2" data-placement="top" data-toggle="tooltip" title="" data-original-title="تایید شده">
-                                        <span class="text-success" uk-icon="checkmark-circle-outline"></span>
-                                    </span>
-                                    <span class="mr-2" data-placement="top" data-toggle="tooltip" title="" data-original-title="تایید نشده">
-                                        <span class="text-danger" uk-icon="close-circle-outline"></span>
-                                    </span>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@item.Title</td>
+                                    <td>@item.DateCreated.</td>
+                                    <td>
 
-                                </td>
-                                <td>
-                                    <span class="mr-2" data-placement="top" data-toggle="tooltip" title="" data-original-title="جزئیات">
-                                        <a onclick="Info()" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="information-circle-outline"></a>
-                                    </span>
-                                </td>
-                            </tr>
+                                        @if (item.IsValid)
+                                        {
+                                            <span class="mr-2" data-placement="top" data-toggle="tooltip" title="" data-original-title="تایید شده">
+                                                <span class="text-success" uk-icon="checkmark-circle-outline"></span>
+                                            </span>
+                                        }
+                                        else
+                                        {
+                                            <span class="mr-2" data-placement="top" data-toggle="tooltip" title="" data-original-title="تایید نشده">
+                                                <span onclick="ChangeStatus(@item.TopicId)" class="text-danger" uk-icon="close-circle-outline"></span>
+                                            </span>
+                                        }
+                                    </td>
+                                    <td>
+                                        <span class="mr-2" data-placement="top" data-toggle="tooltip" title="" data-original-title="جزئیات">
+                                            <a onclick="Info(@item.TopicId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="information-circle-outline"></a>
+                                        </span>
+                                    </td>
+                                </tr>
+                            }
 
                         </tbody>
                     </table>
@@ -64,7 +76,7 @@
 
             <div class="card-footer bg-white">
                 <nav aria-label="Page navigation example">
-                    @*@await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })*@
+                    @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })
                 </nav>
             </div>
         </div>
@@ -80,6 +92,18 @@
                 $(".modal-content").html(result);
             });
         }
+
+        function ChangeStatus(id) {
+            $.get("/Admin/Topic/ChangeStatus/" + id, function () {
+                window.location.reload();
+            });
+        }
+
+        function BtnSearch() {
+            var data = $("#SearchInputUserPhone").val();
+            window.location.href = "/Admin/Topic?page=1&Search=" + data;
+        }
+
     </script>
 
 }
