--- a/GhasreMobile/Areas/User/Views/Order/Index.cshtml
+++ b/GhasreMobile/Areas/User/Views/Order/Index.cshtml
@@ -15,6 +15,11 @@
                         <th>
                             <label class="date">@item.DateSubmited.DateToShamsi()</label>
                         </th>
+                        <th></th>
+                        <th></th>
+                        <th>
+                            <label class="date">شماره فاکتور @item.OrdeId#  </label>
+                        </th>
                     </tr>
                     <tr>
                         <th>نام محصول</th>
