--- a/GhasreMobile/Areas/Admin/Views/Client/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Client/Components/Edit.cshtml
@@ -49,7 +49,7 @@
             </div>
             <div class="form-group col-md-3">
                 <label>کیف پول</label>
-                <input value="@Model.Balance" class="form-control form-control-sm" placeholder="840000" disabled>
+                <input asp-for="Balance" class="form-control form-control-sm" placeholder="840000">
             </div>
 
             <div class="form-group col-md-3">
