--- a/GhasreMobile/Areas/User/Views/Ticket/Index.cshtml
+++ b/GhasreMobile/Areas/User/Views/Ticket/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model SendTicketVm
+@{
     ViewData["Title"] = "Index";
     Layout = "/Areas/User/Views/Shared/_Layout.cshtml";
 }
@@ -10,29 +11,24 @@
         </h3>
     </div>
     <div class="body">
-        <ul>
-            <li>
-                <partial name="_TicketBlock" />
-            </li>
-            <li>
-                <partial name="_TicketBlock" />
-            </li>
-            <li>
-                <partial name="_TicketBlock" />
-            </li>
-            <li>
-                <partial name="_TicketBlock" />
-            </li>
-            <li>
-                <partial name="_TicketBlock" />
-            </li>
-            <li>
-                <partial name="_TicketBlock" />
-            </li>
+        <ul id="listTicket">
+            @*@await Component.InvokeAsync("AllTicketUser")*@
         </ul>
     </div>
-    <div class="foot">
-        <textarea type="tel" class="entry" value=""></textarea>
+    <form asp-action="SendTicket" class="foot">
+        <input type="text" class="entry" asp-for="Title" />
+        <span class="uk-text-danger" asp-validation-for="Title"></span>
+        <textarea type="text" class="entry" asp-for="Body"></textarea>
+        <span class="uk-text-danger" asp-validation-for="Body"></span>
         <button class="send" uk-icon="send"></button>
-    </div>
+    </form>
 </div>
+@section Scripts{
+    <script>
+        $.get("/User/Ticket/AllTicket/",
+            function (result) {
+                $("#listTicket").html(result);
+            }
+        );
+    </script>
+}
