--- a/GhasreMobile/Areas/User/Views/Wallet/Index.cshtml
+++ b/GhasreMobile/Areas/User/Views/Wallet/Index.cshtml
@@ -13,7 +13,7 @@
     </a>
     <div class="balance">
         <label class="bal">@ViewBag.Balance.ToString("#,0")</label>
-        <span class="t">ریال</span>
+        <span class="t">تومان</span>
     </div>
 </div>
 @*@{ 
